# openweather_task

./: .dockerignore  .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
openweather_task/: config.py  main.py
openweather_task/database/: database.py  models.py
openweather_task/database/migrations/alembic/: env.py
openweather_task/database/migrations/alembic/versions/: b36f4b466a79_add_item_sendings_table.py  be1abbe79118_initial_migration.py
openweather_task/database/models/: items.py  users.py
openweather_task/routers/: items.py  users.py
openweather_task/schemas/: schemas.py
tests/: conftest.py  test_routes.py  test_version.py
